syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

package discount;
import "google/protobuf/empty.proto";

service DiscountProtoService {
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (google.protobuf.Empty);
}

message GetDiscountRequest {
	string productName = 1;
}
message CreateDiscountRequest {
	string productName = 1;
	string description = 2;
	int32 amount = 3;
}
message UpdateDiscountRequest {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}
message DeleteDiscountRequest {
	string productName = 1;
}
message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}